--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Coursera</title>
 </head>
 <body>
-<h1>Coursera</h1>
+    <h1>Coursera</h1>
+    <div>DIV1 element</div>
+    <span>span1 element</span>
 </body>
 </html>
-
-
-
