--- a/site/index.html
+++ b/site/index.html
@@ -39,6 +39,8 @@
     </aside>
     
     <div>
+        <img src="http://lorempixel.com/output/nature-q-c-640-480-1.jpg" 
+        width="640" height="480">
         Structure of an unordered list
         <ul>
             <li>item1</li>
