--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,11 @@
     <title>Coursera</title>
 </head>
 <body>
-    <header>
+    <header {
+        color: blue;
+        font-size: 20px;
+        width: 200px
+        }>
         header element - Some header information goes here. Usually
         consists of company logo, some tag line etc. Sometimes, 
         navigation is contained in the header as well.
@@ -40,7 +44,7 @@
     
     <div>
         <img src="http://lorempixel.com/output/nature-q-c-640-480-1.jpg" 
-        width="640" height="480">
+        width="215" height="150">
         Structure of an unordered list
         <ul>
             <li>item1</li>
