--- a/site/index.html
+++ b/site/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <title>Coursera</title>
 </head>
+<style>
+header {color: blue;
+    font-size: 20px;
+    width: 200px
+    }
+</style>
 <body>
-    <header {
-        color: blue;
-        font-size: 20px;
-        width: 200px
-        }>
+    <header>
         header element - Some header information goes here. Usually
         consists of company logo, some tag line etc. Sometimes, 
         navigation is contained in the header as well.
