span div to index

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <title>Coursera</title>
 </head>
 <style>
-header {color: blue;
+h1 {color: blue;
     font-size: 20px;
     width: 200px
     }
