span div to index

--- a/site/index.html
+++ b/site/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8">
     <title>Coursera</title>
 </head>
+
 <style>
-h1 {color: blue;
+header {color: green;
     font-size: 20px;
-    width: 200px
+    width: 200px;
     }
+.blue {
+    color:blue;
+}
 </style>
+
 <body>
     <header>
         header element - Some header information goes here. Usually
@@ -19,7 +24,7 @@ h1 {color: blue;
         links to different parts of the web site.</nav>
     </header>
     
-    <h1>Coursera</h1>
+    <h1 class="blue">Coursera</h1>
     <section>
         section, article, aside and footer dont give any additional 
         functionallity over divs but are easier to read
