--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,15 @@
 </head>
 
 <style>
+header li {
+    list-style: none;
+}
+a:link, a:visited {
+    text-decoration: none;
+    background-color: grey;
+    border: 1px solid gold;
+    color: black;
+}
 header {color: green;
     font-size: 20px;
     width: 200px;
@@ -23,6 +32,13 @@ header {color: green;
         <nav>nav (short for navigation) element - Usually contains 
         links to different parts of the web site.</nav>
     </header>
+    
+    <ul>
+        <li><a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/lecture/kMmI7/lecture-9-creating-links"
+               target="_blank"></a></li>
+        <li><a href="https://github.com/jhu-ep-coursera/fullstack-course4"
+               target="_blank"></a></li>
+    </ul>
     
     <h1 class="blue">Coursera</h1>
     <section>
