span div to index

--- a/site/index.html
+++ b/site/index.html
@@ -35,9 +35,9 @@ header {color: green;
     
     <ul>
         <li><a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/lecture/kMmI7/lecture-9-creating-links"
-               target="_blank"></a></li>html-css-javascript-for-web-developers
+               target="_blank">html-css-javascript-for-web-developers</a></li>
         <li><a href="https://github.com/jhu-ep-coursera/fullstack-course4"
-               target="_blank"></a></li>fullstack-course4
+               target="_blank">fullstack-course4</a></li>
     </ul>
     
     <h1 class="blue">Coursera</h1>
