--- a/site/index.html
+++ b/site/index.html
@@ -14,6 +14,11 @@ a:link, a:visited {
     background-color: grey;
     border: 1px solid gold;
     color: black;
+    display: block;
+    width: 200px;
+    text-align: center;
+    margin-bottom: 1px;
+    
 }
 header {color: green;
     font-size: 20px;
