--- a/site/index.html
+++ b/site/index.html
@@ -17,8 +17,11 @@ a:link, a:visited {
     display: block;
     width: 200px;
     text-align: center;
-    margin-bottom: 1px;
-    
+    margin-bottom: 10px;    
+}
+a:hover, a:active {
+    background-color: silver;
+    color: grey;
 }
 header {color: green;
     font-size: 20px;
